Working edge function

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,5 @@
 [build.environment]
 NODE_VERSION = "16"
-NEXT_USE_NETLIFY_EDGE = "true"
 
 [context.alpha]
 environment = { CHANNEL = "alpha" }
@@ -9,7 +8,4 @@ environment = { CHANNEL = "alpha" }
 environment = { CHANNEL = "beta" }
 
 [dev]
-framework = "#static"
-
-# [[plugins]]
-# package = "@netlify/plugin-nextjs"
+command = "next dev"
