--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,9 @@
-[build.environment]
-NODE_VERSION = "16"
+[build]
 command = "next build"
 publish = ".next"
+
+[build.environment]
+NODE_VERSION = "16"
 
 [context.alpha]
 environment = { CHANNEL = "alpha" }
