--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.8",
     "@heroicons/react": "^2.0.14",
+    "@netlify/esbuild": "^0.14.39",
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
@@ -107,7 +108,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
-    "@netlify/esbuild": "0.14.39",
     "@open-sauced/check-engines": "^1.2.0",
     "@open-sauced/conventional-commit": "^1.0.1",
     "@playwright/test": "^1.30.0",
