--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,18 +89,10 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
-      - name: Generate token
-        id: generate_token
-        uses: tibdex/github-app-token@v1
-        with:
-          app_id: ${{ secrets.OS_GITHUB_APP_ID }}
-          private_key: ${{ secrets.OS_GITHUB_APP_PRIVATE_KEY }}
-
       - name: "☁️ checkout repository"
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          token: ${{ steps.generate_token.outputs.token }}
 
       - name: "📂 download build artifacts"
         uses: actions/download-artifact@v2
@@ -112,7 +104,7 @@ jobs:
         id: semantic-release
         uses: open-sauced/release@v1
         env:
-          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           HUSKY: 0
 
   cleanup:
