--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "preinstall": "npx @open-sauced/check-engines",
     "prestart": "npx @open-sauced/check-engines",
     "push": "npx @open-sauced/conventional-commit",
-    "dev": "next dev",
+    "dev": "netlify dev",
     "prebuild": "node generate-netlify-env.js",
     "build": "next build",
     "start": "next start",
@@ -142,6 +142,7 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.3",
+    "netlify-cli": "^16.0.1",
     "postcss": "^8.4.21",
     "prettier": "^3.0.0",
     "storybook": "^7.2.0",
