--- a/netlify.toml
+++ b/netlify.toml
@@ -12,5 +12,6 @@ environment = { CHANNEL = "alpha" }
 environment = { CHANNEL = "beta" }
 
 [dev]
-command = "next dev"
-autoLaunch = false
+command = "next dev -p 3001"
+port = 3000
+targetPort = 3001
