--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@open-sauced/insights",
   "description": "🍕The dashboard for open source discovery.",
   "keywords": [],
-  "version": "1.60.0-beta.6",
+  "version": "1.60.0-beta.5",
   "author": "Brian Douglas <brian@opensauced.pizza>",
   "private": true,
   "license": "Apache 2.0",
@@ -27,7 +27,7 @@
     "preinstall": "npx @open-sauced/check-engines",
     "prestart": "npx @open-sauced/check-engines",
     "push": "npx @open-sauced/conventional-commit",
-    "dev": "next dev",
+    "dev": "netlify dev",
     "prebuild": "node generate-netlify-env.js",
     "build": "next build",
     "start": "next start",
@@ -85,6 +85,7 @@
     "echarts-for-react": "^3.0.2",
     "next": "^13.4.7",
     "octokit": "^2.0.14",
+    "path-to-regexp": "^6.2.1",
     "posthog-js": "^1.57.2",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
@@ -108,7 +109,6 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@netlify/esbuild": "0.14.39",
-    "@netlify/plugin-nextjs": "^4.38.1",
     "@open-sauced/check-engines": "^1.2.0",
     "@open-sauced/conventional-commit": "^1.0.1",
     "@playwright/test": "^1.30.0",
@@ -143,6 +143,7 @@
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.5.0",
     "lint-staged": "^13.2.3",
+    "netlify-cli": "^16.0.1",
     "postcss": "^8.4.21",
     "prettier": "^3.0.0",
     "storybook": "^7.2.0",
