--- a/netlify.toml
+++ b/netlify.toml
@@ -8,4 +8,6 @@ environment = { CHANNEL = "alpha" }
 environment = { CHANNEL = "beta" }
 
 [dev]
-framework = "#static"
+command = "next dev -p 3001"
+port = 3000
+targetPort = 3001
