rename devtosocialcard folder

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "next-types.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "next-types.d.ts", "**/*.ts", "**/*.tsx", "components/molecules/DevToSocialImage"],
   "exclude": ["node_modules"]
 }
