--- a/netlify.toml
+++ b/netlify.toml
@@ -11,3 +11,6 @@ environment = { CHANNEL = "beta" }
 command = "next dev -p 3001"
 port = 3000
 targetPort = 3001
+
+[functions]
+deno_import_map = "./netlify/edge-functions/deno.json"
