Update `dev` command and use env variable for api url

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "preinstall": "npx @open-sauced/check-engines",
     "prestart": "npx @open-sauced/check-engines",
     "push": "npx @open-sauced/conventional-commit",
-    "dev": "netlify dev",
+    "dev": "next dev",
+    "dev:netlify": "netlify dev",
     "prebuild": "node generate-netlify-env.js",
     "build": "next build",
     "start": "next start",
