--- a/netlify.toml
+++ b/netlify.toml
@@ -8,4 +8,9 @@ environment = { CHANNEL = "alpha" }
 environment = { CHANNEL = "beta" }
 
 [dev]
-framework = "#static"
+command = "next dev -p 3001"
+port = 3000
+targetPort = 3001
+
+[functions]
+deno_import_map = "./netlify/edge-functions/deno.json"
