--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "@nivo/scatterplot": "^0.80.0",
+    "@nivo/treemap": "^0.83.0",
     "@primer/octicons-react": "^17.11.1",
     "@radix-ui/react-alert-dialog": "^1.0.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
@@ -69,7 +70,7 @@
     "@radix-ui/react-toast": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.3",
-    "@react-spring/web": "^9.6.1",
+    "@react-spring/web": "^9.7.3",
     "@sentry/nextjs": "^7.53.1",
     "@stripe/stripe-js": "^1.46.0",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
@@ -98,7 +99,6 @@
     "react-loading-skeleton": "^3.1.0",
     "react-parallax-tilt": "^1.7.151",
     "react-schemaorg": "^2.0.0",
-    "react-spring": "^9.6.1",
     "react-use": "^17.4.0",
     "rooks": "^7.4.4",
     "schema-dts": "^1.1.0",
