--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "@types/eslint": "^8.21.0",
     "@types/jest": "^28.1.6",
     "@types/node": "^18.11.18",
+    "@types/path-to-regexp": "^1.7.0",
     "@types/react": "^18.0.27",
     "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.10",
