--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@radix-ui/react-toggle-group": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.3",
     "@react-spring/web": "^9.7.3",
-    "@sentry/nextjs": "^7.53.1",
+    "@sentry/nextjs": "^7.64.0",
     "@stripe/stripe-js": "^1.46.0",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-helpers-react": "^0.4.0",
@@ -84,6 +84,7 @@
     "date-fns": "^2.29.3",
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
+    "million": "^2.6.0-beta.4",
     "next": "^13.4.7",
     "octokit": "^2.0.14",
     "path-to-regexp": "^6.2.1",
