--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "rooks": "^7.4.4",
     "schema-dts": "^1.1.0",
     "stripe": "^11.8.0",
+    "swiper": "^10.2.0",
     "swr": "^2.0.3",
     "tailwindcss-radix": "^2.7.0",
     "zustand": "^4.3.2"
