--- a/netlify.toml
+++ b/netlify.toml
@@ -14,3 +14,9 @@ targetPort = 3001
 
 [functions]
 deno_import_map = "./netlify/edge-functions/deno.json"
+
+[[redirects]]
+  from = "https://insight.opensauced.pizza/*"
+  to = "https://insights.opensauced.pizza/:splat"
+  status = 301
+  force = true
