--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "echarts-for-react": "^3.0.2",
     "next": "^13.4.7",
     "octokit": "^2.0.14",
+    "open-graph": "^0.2.6",
     "path-to-regexp": "^6.2.1",
     "posthog-js": "^1.57.2",
     "react": "^18.2.0",
