--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "@nivo/scatterplot": "^0.80.0",
+    "@nivo/treemap": "^0.83.0",
     "@primer/octicons-react": "^17.11.1",
     "@radix-ui/react-alert-dialog": "^1.0.2",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
