--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,9 @@
   "extends": ["next/core-web-vitals", "plugin:prettier/recommended", "plugin:storybook/recommended"],
   "plugins": ["unused-imports"],
   "rules": {
+    "prettier/prettier": ["error",{
+      "endOfLine": "auto"}
+    ],
     "jsx-quotes": "error",
     "unused-imports/no-unused-imports": "error",
     "import/order": [
