--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "files": [
     "build/**/*"
   ],
-  "homepage": "https://insights.opensauced.pizza",
+  "homepage": "https://app.opensauced.pizza",
   "bugs": {
     "url": "https://github.com/open-sauced/insights/issues"
   },
