feat: show onboarding button on small screens (#1803)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,21 +2,13 @@
   "extends": ["next/core-web-vitals", "plugin:prettier/recommended", "plugin:storybook/recommended"],
   "plugins": ["unused-imports"],
   "rules": {
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "jsx-quotes": "error",
     "unused-imports/no-unused-imports": "error",
     "import/order": [
       "error",
       {
-        "groups": [
-          "builtin",
-          "external",
-          "internal",
-          "object",
-          "type",
-          "index",
-          "parent",
-          "sibling"
-        ]
+        "groups": ["builtin", "external", "internal", "object", "type", "index", "parent", "sibling"]
       }
     ]
   }
