Fix the eslint issue by using the word disable

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
       {
         "groups": ["builtin", "external", "internal", "object", "type", "index", "parent", "sibling"]
       }
-    ]
+    ],
+    "no-console": "error",
+    "no-unused-vars": "error"
   }
 }
