--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,6 @@
         "groups": ["builtin", "external", "internal", "object", "type", "index", "parent", "sibling"]
       }
     ],
-    "no-console": "error",
-    "no-unused-vars": "error"
+    "no-console": "error"
   }
 }
