--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
       {
         "groups": ["builtin", "external", "internal", "object", "type", "index", "parent", "sibling"]
       }
-    ]
+    ],
+    "no-console": "error"
   }
 }
