--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "octokit": "^2.0.14",
     "path-to-regexp": "^6.2.1",
     "posthog-js": "^1.83.0",
+    "posthog-node": "^3.1.3",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
     "react-day-picker": "^8.7.1",
