chore: add publci test list for non-logged-in userd

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ TIER_API_KEY=rk_test_51H1yp3JnZ7CYWRG2gepmj8lO5VDsDJIHbjw8bBxtVjHSzme6cKrP8ASKyp
 
 ### Test insights page id
 NEXT_PUBLIC_INSIGHTS_PAGE_ID=338
+NEXT_PUBLIC_LIST_PAGE_ID=e49bcede-dfbc-4f04-9866-f4d06e1bfbe5
