--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
     "react-emoji-render": "^2.0.1",
+    "react-error-boundary": "^4.0.11",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.11.0",
     "react-loading-skeleton": "^3.1.0",
