--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "nextjs-progressbar": "^0.0.16",
     "octokit": "^2.0.14",
     "path-to-regexp": "^6.2.1",
+    "playwright": "^1.40.1",
     "posthog-js": "^1.83.0",
     "posthog-node": "^3.1.3",
     "react": "^18.2.0",
