--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "build-storybook": "storybook build",
     "lint": "next lint",
     "format": "next lint -- --fix --dir .",
-    "prepare": "npx husky install & npx playwright install chromium"
+    "prepare": "npx husky install"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.8",
@@ -90,7 +90,8 @@
     "nextjs-progressbar": "^0.0.16",
     "octokit": "^2.0.14",
     "path-to-regexp": "^6.2.1",
-    "playwright": "^1.40.1",
+    "playwright-aws-lambda": "^0.10.0",
+    "playwright-core": "^1.30.0",
     "posthog-js": "^1.83.0",
     "posthog-node": "^3.1.3",
     "react": "^18.2.0",
