--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "@types/react": "^18.0.27",
     "@types/react-csv": "^1.1.3",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.5",
     "eslint": "^8.33.0",
