--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
   "extends": ["next/core-web-vitals", "plugin:storybook/recommended", "plugin:prettier/recommended"],
   "plugins": ["unused-imports", "@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": true
+  },
   "rules": {
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "jsx-quotes": "error",
