--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/eslint": "^8.21.0",
     "@types/node": "^18.11.18",
     "@types/path-to-regexp": "^1.7.0",
