--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,11 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:storybook/recommended", "plugin:prettier/recommended"],
+  "extends": ["next/core-web-vitals", "plugin:storybook/recommended"],
   "plugins": ["unused-imports", "@typescript-eslint"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": true
   },
   "rules": {
-    "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "jsx-quotes": "error",
     "unused-imports/no-unused-imports": "error",
     "import/order": [
