feat: dark theme mode
- add `next-themes` package
- create `ThemeProvider`
- set tailwindcss  config  `darkMode` to `class`
- fix `eslint` errors

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "echarts": "^5.4.1",
     "echarts-for-react": "^3.0.2",
     "next": "^13.4.7",
+    "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
     "octokit": "^3.1.2",
     "path-to-regexp": "^6.2.1",
