--- a/package.json
+++ b/package.json
@@ -111,7 +111,9 @@
     "stripe": "^11.8.0",
     "swiper": "^10.2.0",
     "swr": "^2.0.3",
+    "tailwindcss-animate": "^1.0.7",
     "tailwindcss-radix": "^2.7.0",
+    "vaul": "^0.9.0",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
