--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "lint": "next lint",
     "lint:fix": "next lint -- --fix --dir .",
     "format": "prettier --write .",
-    "prepare": "npx husky install"
+    "prepare": "npx husky install",
+    "e2e": "npx playwright test",
+    "e2e:ui": "npm run e2e -- --ui"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.8",
@@ -115,6 +117,7 @@
     "@babel/core": "^7.20.12",
     "@open-sauced/check-engines": "^1.2.0",
     "@open-sauced/conventional-commit": "^1.0.1",
+    "@playwright/test": "^1.42.1",
     "@storybook/addon-a11y": "^7.6.3",
     "@storybook/addon-actions": "^7.6.3",
     "@storybook/addon-essentials": "^7.6.3",
