--- a/package.json
+++ b/package.json
@@ -33,17 +33,14 @@
     "start": "next start",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:playwright": "npx playwright",
-    "pretest:e2e": "npm run test:e2e-install",
-    "test:e2e-install": "npm run test:playwright -- install && npx playwright install-deps",
-    "test:e2e": "npm run test:playwright -- test",
-    "test:e2e-report": "npm run test:playwright -- show-report",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "lint": "next lint",
     "lint:fix": "next lint -- --fix --dir .",
     "format": "prettier --write .",
-    "prepare": "npx husky install"
+    "prepare": "npx husky install",
+    "e2e": "npx playwright test",
+    "e2e:ui": "npm run e2e -- --ui"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.8",
@@ -120,7 +117,7 @@
     "@babel/core": "^7.20.12",
     "@open-sauced/check-engines": "^1.2.0",
     "@open-sauced/conventional-commit": "^1.0.1",
-    "@playwright/test": "^1.30.0",
+    "@playwright/test": "^1.42.1",
     "@storybook/addon-a11y": "^7.6.3",
     "@storybook/addon-actions": "^7.6.3",
     "@storybook/addon-essentials": "^7.6.3",
